benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_Add_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_Mul.rs
Time: 2025-09-15 19:12:21

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `s1` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_Mul_impl.rs:93:22
   |
93 |     let mut result = s1@;
   |                      ^^ help: a local variable with a similar name exists: `sx`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `s1` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_Mul_impl.rs:93:22
   |
93 |     let mut result = s1@;
   |                      ^^ help: a local variable with a similar name exists: `sx`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
